--- a/missingkids/less/custom-css.less
+++ b/missingkids/less/custom-css.less
@@ -157,6 +157,8 @@ hr {
 
 
 
+
+
 .gen-info-list {
     margin-bottom: 0;
     .list-group-item img {
@@ -215,6 +217,9 @@ hr {
             }
         }
 
+    }
+    h5 {
+        padding:  0 16px;
     }
 
 }
@@ -769,5 +774,13 @@ textarea.form-control {
     h4 {
         margin-top: 0;
         margin-bottom: 0;
+    }
+}
+
+.close-form {
+    text-align: right;
+    i {
+        cursor: pointer;
+        font-size: @font-size-small;
     }
 }
